5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1791_1597.log
== TEST (2019-05-29 14:05:41) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
if([compras]>=80):
	x=sum(compras)-5
	else:
print(round(x,2))
-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:05:47) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
if([compras]>=80):
	x=sum(compras)-5
else:
print(round(x,2))
-- ERROR:
File "XXXX", line 6
    print(round(x,2))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:06:33) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
if([compras]>=80):
	x=sum(compras)-5
	print(round(x,2))
else:
	print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:07:33) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
if([compras] >= 80):
	x=sum(compras)-5
	print(round(x,2))
else:
	print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:07:34) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
if([compras] >= 80):
	x=sum(compras)-5
	print(round(x,2))
else:
	print(round(x,2))
-- EXECUTION TIME:
1.90374
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 3, in <module>
    if([compras] >= 80):
TypeError: unorderable types: list() >= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:07:39) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
if([compras] >= 80):
	x=sum(compras)-5
	print(round(x,2))
else:
	print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:07:41) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
if([compras] >= 80):
	x=sum(compras)-5
	print(round(x,2))
else:
	print(round(x,2))
-- EXECUTION TIME:
2.77721
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 3, in <module>
    if([compras] >= 80):
TypeError: unorderable types: list() >= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:07:43) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
if([compras] >= 80):
	x=sum(compras)-5
	print(round(x,2))
else:
	print(round(x,2))
-- EXECUTION TIME:
3.34856
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 3, in <module>
    if([compras] >= 80):
TypeError: unorderable types: list() >= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:08:18) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:36) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80):
	print(round(s-5,2))
else:
	print(round(x,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:26) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80):
	print(round(s-5,2))
else:
	print(round(x,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:10:31) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80):
	print(round(s-5,2))
else:
	print(round(x,2))


-- EXECUTION TIME:
2.28569
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
78.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
:146.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:40) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80):
	print(round(s,2)-5)
else:
	print(round(x,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:43) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80):
	print(round(s,2)-5)
else:
	print(round(x,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:10:48) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80):
	print(round(s,2)-5)
else:
	print(round(x,2))


-- EXECUTION TIME:
2.00425
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
78.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
:146.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:11:20) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80.0):
	print(round(s,2)-5)
if(s<80.0):
	print(round(x,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:11:24) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80.0):
	print(round(s,2)-5)
if(s<80.0):
	print(round(x,2))


-- EXECUTION TIME:
1.98406
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
78.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
:146.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:11:25) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80.0):
	print(round(s,2)-5)
if(s<80.0):
	print(round(x,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:09) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80.0):
	print(round(s,2)-5.0)
if(s<80.0):
	print(round(x,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:01) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80.0):
	print(round(s,2)-5.0)
if(s<80.0):
	print(round(x,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:14:05) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80.0):
	print(round(s,2)-5.0)
if(s<80.0):
	print(round(x,2))


-- EXECUTION TIME:
2.10419
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
78.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
146.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:14) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>80.0):
	print(round(s,2)-5.0)
if(s<80.0):
	print(round(x,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:21) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>80.0):
	print(round(s,2)-5.0)
if(s<80.0):
	print(round(x,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:14:26) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>80.0):
	print(round(s,2)-5.0)
if(s<80.0):
	print(round(x,2))


-- EXECUTION TIME:
2.13618
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
78.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
:146.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:31) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>80.0):
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:38) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>80.0):
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:50) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>80.0):
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:19) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80.0):
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:42) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80.0):
	print(s-5.0)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:44) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>=80.0):
	s=round((s-5.0),2)
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:20:14) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round((s-5.0),2)
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:20:23) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round((s-5.0),2)
	print(s)
if(s<80.0):
	print(s)


-- EXECUTION TIME:
2.23892
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
78.52
78.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
146.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:01) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round((s-(5.0),2)
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
File "XXXX", line 6
    print(s)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:15) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round((s-(5.0),2))
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:26) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round((s-(5.0),2))
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:40) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round((s-(5.0),2))
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:47) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round((s-(5.0),2))
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:10) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s-5.0,2)
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:35) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s-5.0,2)
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:24:35) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s-5.0,2)
	print(s)
if(s<80.0):
	print(s)


-- EXECUTION TIME:
2.21784
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
78.52
78.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
146.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:39) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s-5.0,3)
	print(s)
if(s<80.0):
	print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:24:47) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s-5.0,3)
	print(s)
if(s<80.0):
	print(s)


-- EXECUTION TIME:
1.94081
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
78.52
78.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
146.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:00) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s-5.0,2)
	print(s)
if(s<80.0):
	print(round(s,2)


-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:25:12) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s-5.0,2)
	print(s)
if(s<80.0):
	print(round(s,2))


-- EXECUTION TIME:
2.40126
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
78.52
78.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
146.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:52) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s-15.0,2)
	print(s)
if(s<80.0):
	print(round(s,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:26:31) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s-15.0,2)
	print(s)
if(s<80.0):
	print(round(s,2))


-- EXECUTION TIME:
2.17108
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
68.52
68.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
136.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:22) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=([compras]>80.0)
	s=round(s-x,2)
	print(s)
if(s<80.0):
	print(round(s,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:27) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=([compras]>80.0)
	s=round(s-x,2)
	print(s)
if(s<80.0):
	print(round(s,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:27:32) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=([compras]>80.0)
	s=round(s-x,2)
	print(s)
if(s<80.0):
	print(round(s,2))


-- EXECUTION TIME:
2.25981
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 5, in <module>
    x=([compras]>80.0)
TypeError: unorderable types: list() > float()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:22) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=[:compras]>80.0
	s=round(s-x,2)
	print(s)
if(s<80.0):
	print(round(s,2))


-- ERROR:
File "XXXX", line 5
    x=[:compras]>80.0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:59) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=([compras]>80.0)*5
	s=round(s-x,2)
	print(s)
if(s<80.0):
	print(round(s,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:29:10) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=([compras]>80.0)*5
	s=round(s-x,2)
	print(s)
if(s<80.0):
	print(round(s,2))


-- EXECUTION TIME:
2.07849
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 5, in <module>
    x=([compras]>80.0)*5
TypeError: unorderable types: list() > float()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:20) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=[compras:]>80.0*5
	s=round(s-x,2)
	print(s)
if(s<80.0):
	print(round(s,2))


-- ERROR:
File "XXXX", line 5
    x=[compras:]>80.0*5
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:35) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=(compras)>80.0*5
	s=round(s-x,2)
	print(s)
if(s<80.0):
	print(round(s,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:29:47) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=(compras)>80.0*5
	s=round(s-x,2)
	print(s)
if(s<80.0):
	print(round(s,2))


-- EXECUTION TIME:
2.29104
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 6, in <module>
    s=round(s-x,2)
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:56) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=(compras)>80.0*5
	s=round(s-x,2)
	print(s)
if(s<80.0):
	print(round(s,2))
else:


-- ERROR:
File "XXXX", line 12
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:00) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=(compras)>80.0*5
	s=round(s-x,2)
	print(s)
if(s<80.0):
	print(round(s,2))
else:
	


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:14) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=(compras)>80.0*5
	s=round(s-x,2)
	print(s)
if(s<80.0):
	print(round(s,2))
else:
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:34) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=(compras)>80.0*5
	s=round(s-x,2)
	print(s)
elif(s<80.0):
	print(round(s,2))
else:

	
-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:42) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=(compras)>80.0*5
	s=round(s-x,2)
	print(s)
elif(s<80.0):
	print(round(s,2))
else:
-- ERROR:
File "XXXX", line 11
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:36:45) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=(compras)>80.0*5
	s=round(s-x,2)
	print(s)
elif(s<80.0):
	print(round(s,2))
else:
-- EXECUTION TIME:
0.606878
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 11
    
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:49) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	x=(compras)>80.0*5
	s=round(s-x,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:42:37) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s+5,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- EXECUTION TIME:
0.449558
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
88.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
156.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:41) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s+5,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:48) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s-5,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:47:19) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s-5,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:49:07) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
if(s>=80.0):
	s=round(s-5,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:59) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
x=([compras]>80.0)
d=(x*5)
if(s>80.0):
	s=round(s-(d),2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:33) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)

if([compras]>80):
	i=i+[i]
	d=(i*5)
if(s>80.0):
	s=round(s-(d),2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:01:40) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)

if(s>80.0):
	s=round(s-(5),2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- EXECUTION TIME:
0.410018
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
78.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
146.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:04:28) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
d=[compras>80.0]*5
if(s>80.0):
	s=round(s-(d),2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:06:34) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
d=[compras>80.0]*5
if(s>80.0):
	s=round(s-(d),2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- EXECUTION TIME:
0.532681
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 6, in <module>
    s=round(s-(d),2)
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:46) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
d=[compras>80.0]*5
if(s>80.0):
	s=round(s-(d),2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:07:01) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
d=[compras >80.0]*5
if(s>80.0):
	s=round(s-(d),2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- EXECUTION TIME:
0.397851
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 6, in <module>
    s=round(s-(d),2)
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:01) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=round(sum(compras),2)
d=[compras >80.0]*5
if(s>80.0):
	s=round(s-(d),2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:26) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
d=[compras >80.0]*5
if(s>80.0):
	s=round(s-(d),2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:09:02) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
d=[compras >80.0]*5
if(s>80.0):
	s=round(s-d,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:09:40) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
d=[compras >80.0]*5
if(s>80.0):
	s=round(s-d,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- EXECUTION TIME:
0.456133
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 6, in <module>
    s=round(s-d,2)
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:11:36) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
i=0
while(i<=[compras>80]):
	i+=i
if(s>80.0):
	s=round(s-(i*5),2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:34) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
i=0
while(i<=[compras>80]):
	i+=i
if(s>80.0):
	s=(round(s-(i*5),2))
	print(s)
if(s<80.0):
	print(round(s,2))

-- EXECUTION TIME:
0.292022
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 5, in <module>
    while(i<=[compras>80]):
TypeError: unorderable types: int() <= list()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:39) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
i=0
while(i<=[compras>80]):
	i+=i
if(s>80.0):
	s=(round(s-(i*5),2))
	print(s)
if(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:29) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum[compras]
if(s>80.0):
	s=(round(s-(i*5),2))
	print(s)
if(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:13:53) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum[compras]
if(s>80.0):
	s=(round(s-(i*5),2))
	print(s)
if(s<80.0):
	print(round(s,2))

-- EXECUTION TIME:
0.445449
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 3, in <module>
    s=sum[compras]
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:14:14) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
d=[compras >80.0]*5
if(s>80.0):
	s=round(s-d,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- EXECUTION TIME:
0.398052
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 6, in <module>
    s=round(s-d,2)
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:01) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
d=[compras > 80]:*5
if(s>80.0):
	s=round(s-d,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
File "XXXX", line 4
    d=[compras > 80]:*5
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:03) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
d=[compras > 80]*5
if(s>80.0):
	s=round(s-d,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:15:53) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
d=[compras>80]
if(s>80.0):
	s=round(s-d,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- EXECUTION TIME:
0.420173
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 6, in <module>
    s=round(s-d,2)
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:53) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
d=[compras>80]
if(s>80.0):
	s=round(s-d,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:52) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if([compras]>80.0):
	d=[i]*5
   s=round(s-d,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
File "XXXX", line 6
    s=round(s-d,2)
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:19:02) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if([compras]>80.0):
	d=[i]*5
s=round(s-d,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
File "XXXX", line 7
    print(s)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:19:07) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if([compras]>80.0):
	d=[i]*5
s=round(s-d,2)
print(s)
elif(s<80.0):
	print(round(s,2))

-- ERROR:
File "XXXX", line 8
    elif(s<80.0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:19:29) 
-- CODE:
from numpy import*
compras=array(eval(input(":")))
s=sum(compras)
if(s>80.0):
	s=round(s-d,2)
	print(s)
elif(s<80.0):
	print(round(s,2))

-- EXECUTION TIME:
0.582455
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1597/main.py", line 5, in <module>
    s=round(s-d,2)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
